* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.0
- Add RockyLinux 8 support

* Tue Dec 21 2021 Kendall Moore <kendall@sicura.us> - 0.3.3
- Update default logrotate create options to tlog:tlog

* Mon Oct 04 2021 Kendall Moore <kendall.moore@onyxpoint.com> - 0.3.2
- Added file resource if file writer is specified

* Tue Aug 24 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.3.1
- Fixed
  - Corrected the logic in `tlog.sh.epp` in the case where a user does not have
    a login shell

* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Wed Feb 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.2
- Expanded simp/rsyslog dependendency range to < 9.0.0.

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.2
- Removed EL6 support

* Wed Apr 15 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.1
- Fix tcsh template

* Tue Feb 25 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0
- Added EL8 support
- Updated acceptance tests to use net/ssh to prevent issues with large SSH
  keyrings
- Added REFERENCE.md and linked into the README.md
- Added optional dependencies for simp/logrotate and simp/rsyslog
- Added workaround to scripts in /etc/profile to work around a bug in tlog that
  would prevent logins if the system hostname could not be found

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.2.0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.2
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Dec 14 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.1
- Fix infinite recursion issue in the SH profile script

* Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 0.1.0
- Update to Hiera 5

* Mon Oct 15 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.1.0